--- a/index.html
+++ b/index.html
@@ -31,14 +31,20 @@
 
 <body class="debug">
     <!-- SECTION header -->
-    <header class="container">
+    <header class="container-fluid">
         <!-- SECTION navbar -->
-        <section class="row">
-            <div class="col">
+        <section class="row h-size">
+            <div class="col-md-4 bg-dark moblie-bg-img-h">
                 <p> focus on what maters</p>
             </div>
-            <div class="col">
-                <p> nav bar</p>
+            <div class="col-8 bg-img-h d-flex justify-content-end moblie-hide">
+                <div><button class="btn btn-dark m-.5">Home</button></div>
+                <div><button class="btn btn-dark m-.5">About</button></div>
+                <div><button class="btn btn-dark m-.5">Connect</button></div>
+                <div><button class="btn btn-dark m-.5">Blog</button></div>
+                <div><button class="btn btn-dark m-.5">Contact</button></div>
+                <div><button class="btn btn-dark m-.5">Team</button></div>
+                <div><button class="btn btn-dark m-.5">Dropdown</button></div>
             </div>
         </section>
     </header>
