--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
         </section>
     </header>
 
+    <!--SECTION  choose us-->
     <main class="container">
+        <section>
+            <div>
+                <p>Why choose us?</p>
+                <div>
+                    <p class="card">then info here i think</p>
+                </div>
+            </div>
+        </section>
 
     </main>
 
