thursday afternoon project

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
     <header class="container-fluid">
         <!-- SECTION navbar -->
         <section class="row h-size">
-            <div class="col-md-4 bg-dark moblie-bg-img-h">
-                <p> focus on what maters</p>
+            <div class="col-md-4 hl-bg moblie-bg-img-h">
+                <h2>Focus on Golf</h2>
+                <i class="mdi mdi-menu"></i>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, reprehenderit illum. Sapiente alias
+                    nisi provident sint eos expedita sunt totam corrupti qui eius dicta sed suscipit, magnam cumque,
+                    maxime facere.</p>
+                <button class="btn btn-info">Get Started</button>
+                <button class="btn btn-info">Watch Video</button>
             </div>
             <div class="col-8 bg-img-h d-flex justify-content-end moblie-hide">
                 <div><button class="btn btn-dark m-.5">Home</button></div>
@@ -50,6 +56,128 @@
     </header>
 
     <main class="container">
+        <!-- SECTION choose golf -->
+        <section class="row bg-light">
+            <div class="col-4"></div>
+            <div class="col-md-4 p-2">
+
+                <h2 class="text-center">Why choose Golf?</h2>
+            </div>
+            <div class="col-4"></div>
+
+            <div class="col-5 min-height-cg pe-0 me-0">
+                <img class="bg-img-chose-golf border border-dark border-3"
+                    src="https://images.unsplash.com/photo-1621471124242-0d3a313b0263?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                    alt="two golfers">
+            </div>
+            <div class="col-1 d-flex align-items-center justify-content-center bg-offwhite min-height-cg ms-0 ps-0">
+                <i class="mdi mdi-chevron-left"></i>
+            </div>
+            <div class="col-5 bg-offwhite min-height-cg">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate doloribus perferendis quos!</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique nesciunt hic, libero quo tempore
+                    ducimus atque autem quasi dolorem ab?</p>
+                <i class="mdi mdi-dots-horizontal d-flex justify-content-center"></i>
+            </div>
+            <div class="col-1 text-center d-flex align-items-center justify-content-center min-height-cg bg-offwhite">
+                <i class="mdi mdi-chevron-right "></i>
+            </div>
+            <!-- NOTE icon dots horizontal -->
+            <div class="col-5">
+            </div>
+
+        </section>
+        <section class="row">
+            <div class="col-4 p-2"></div>
+
+            <div class="col-4 text-center">
+                <h2>Our Services</h2>
+            </div>
+            <div class="col-4"></div>
+
+            <div class="col-4 d-flex">
+
+                <div>
+                    <i class="mdi mdi-briefcase-variant-outline"></i>
+                </div>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem praesentium illum ad. Totam,
+                        recusandae. Quam?</p>
+                </div>
+            </div>
+
+            <div class="col-4 d-flex">
+                <i class="mdi mdi-binoculars"></i>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim minima, nisi voluptatum vitae
+                        tenetur nobis.</p>
+                </div>
+            </div>
+
+            <div class="col-4 d-flex">
+                <i class="mdi mdi-white-balance-sunny"></i>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, inventore doloremque quae
+                        exercitationem iste saepe!</p>
+                </div>
+
+            </div>
+
+            <div class="col-4 d-flex">
+                <i class="mdi mdi-finance "></i>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nostrum assumenda
+                        consequuntur
+                        quaerat fuga rem.</p>
+                </div>
+            </div>
+
+            <div class="col-4 d-flex">
+                <i class="mdi mdi-calendar"></i>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nostrum assumenda
+                        consequuntur
+                        quaerat fuga rem.</p>
+                </div>
+            </div>
+
+            <div class="col-4 d-flex">
+                <i class="mdi mdi-network-strength-4 "></i>
+                <div class="fs-services">
+                    <h6>Lorem, ipsum dolor.</h6>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores nostrum assumenda
+                        consequuntur
+                        quaerat fuga rem.</p>
+                </div>
+            </div>
+
+
+
+        </section>
+
+
+
+        <section class="row">call to golf
+
+        </section>
+
+        <section class="row">icon showoff
+
+        </section>
+
+        <section class="row">blog posts
+
+        </section>
+
+        <section class="row">info
+
+        </section>
 
     </main>
 
